--- a/locale/cs_CZ/manager.po
+++ b/locale/cs_CZ/manager.po
@@ -953,3 +953,205 @@ msgid "manager.people.mergeUsers.into.description"
 msgstr ""
 "Vyberte uživatele, kterému chcete přiřadit autorství předchozího uživatele, "
 "jeho editační úkoly atd."
+
+msgid "doi.editor.preview.objects"
+msgstr "Položka"
+
+msgid "doi.editor.preview.files"
+msgstr "Soubor: {$title}"
+
+msgid "doi.editor.preview.publicationFormats"
+msgstr "Publikační formát: {$title}"
+
+msgid "doi.editor.preview.chapters"
+msgstr "Kapitola: {$title}"
+
+msgid "doi.editor.preview.publication.none"
+msgstr "Do této publikace nebyl přiřazen DOI."
+
+msgid "doi.editor.preview.publication"
+msgstr "DOI pro tuto publikaci bude {$doi}."
+
+msgid "doi.editor.missingPrefix"
+msgstr "DOI musí začínat {$doiPrefix}."
+
+msgid "doi.editor.assignDoi.assigned"
+msgstr "DOI  {$pubId} bylo přiřazeno."
+
+msgid "doi.editor.assignDoi.pattern"
+msgstr "DOI {$pubId} nelze přiřadit, protože obsahuje neplatný vzor."
+
+msgid "doi.editor.assignDoi.emptySuffix"
+msgstr "DOI nelze přiřadit, protože chybí vlastní suffix."
+
+msgid "doi.editor.assignDoi"
+msgstr "Přiřadit {$pubId} tomuto {$pubObjectType}"
+
+msgid "doi.editor.clearObjectsDoi.confirm"
+msgstr "Jste si jisti, že chcete smazat existující DOI?"
+
+msgid "doi.editor.clearObjectsDoi"
+msgstr "Vymazat DOI"
+
+msgid "doi.editor.doiSuffixCustomIdentifierNotUnique"
+msgstr ""
+"Uvedený suffix DOI se již používá pro další publikovanou položku. Pro každou "
+"položku zadejte jedinečný suffix DOI."
+
+msgid "doi.editor.assigned"
+msgstr "Tomuto {$pubObjectType} bylo přiděleno DOI."
+
+msgid "doi.editor.canBeAssigned"
+msgstr ""
+"To co vidíte, je náhled DOI. Vyberte zaškrtávací políčko a uložte formulář "
+"pro přiřazení DOI."
+
+msgid "doi.editor.patternNotResolved"
+msgstr "DOI nemůže být přiděleno, protože obsahuje neplatný vzorec."
+
+msgid "doi.editor.missingParts"
+msgstr ""
+"Není možné vygenerovat DOI, protože jedné nebo více součástem ze vzoru pro "
+"sufix DOI chybí data."
+
+msgid "doi.editor.customSuffixMissing"
+msgstr "DOI nelze přiřadit, protože chybí vlastní suffix."
+
+msgid "doi.editor.doiObjectTypeSubmissionFile"
+msgstr "soubor"
+
+msgid "doi.editor.doiObjectTypeRepresentation"
+msgstr "publikační formát"
+
+msgid "doi.editor.doiObjectTypeChapter"
+msgstr "kapitola"
+
+msgid "doi.editor.doiObjectTypeSubmission"
+msgstr "monografie"
+
+msgid "doi.editor.doi.assignDoi"
+msgstr "Přidělit"
+
+msgid "doi.editor.doi.description"
+msgstr "DOI musí začínat {$prefix}."
+
+msgid "doi.editor.doi"
+msgstr "DOI"
+
+msgid "doi.manager.settings.doiReassign.confirm"
+msgstr "Jste si jisti, že chcete smazat všechny existující identifikátory DOI?"
+
+msgid "doi.manager.settings.doiReassign.description"
+msgstr ""
+"Změníte-li konfiguraci DOI, DOI, které již byly přiřazeny, nebudou "
+"ovlivněny. Jakmile je konfigurace DOI uložena, použijte toto tlačítko pro "
+"vymazání všech stávajících DOI tak, aby se nová nastavení projevila i u "
+"stávajících objektů."
+
+msgid "doi.manager.settings.doiReassign"
+msgstr "Znovu přidělit DOI"
+
+msgid "doi.manager.settings.doiSubmissionFileSuffixPatternRequired"
+msgstr "Zadejte, prosím, vzor sufixu DOI pro soubory."
+
+msgid "doi.manager.settings.doiRepresentationSuffixPatternRequired"
+msgstr "Zadejte, prosím, vzor sufixu DOI pro publikační formáty."
+
+msgid "doi.manager.settings.doiChapterSuffixPatternRequired"
+msgstr "Zadejte, prosím, vzor sufixu DOI pro kapitoly."
+
+msgid "doi.manager.settings.doiPublicationSuffixPatternRequired"
+msgstr "Zadejte, prosím, vzor sufixu DOI pro monografie."
+
+msgid "doi.manager.settings.doiSuffixCustomIdentifier"
+msgstr ""
+"Pro každou publikovanou položku zadejte individuální suffix DOI. Na stránce "
+"metadat dat každé položky naleznete vstupní pole pro zadání přípony DOI."
+
+msgid "doi.manager.settings.doiSuffixDefault.description"
+msgstr ""
+"%p.%m pro monografie<br />%p.%m.c%c pro kapitoly<br />%p.%m.%f pro "
+"publikační formáty<br />%p.%m.%f.%s pro soubory."
+
+msgid "doi.manager.settings.doiSuffixDefault"
+msgstr "Použít výchozí vzor."
+
+msgid "doi.manager.settings.doiSuffixPattern.files"
+msgstr "pro soubory"
+
+msgid "doi.manager.settings.doiSuffixPattern.representations"
+msgstr "pro publikační formáty"
+
+msgid "doi.manager.settings.doiSuffixPattern.chapters"
+msgstr "pro kapitoly"
+
+msgid "doi.manager.settings.doiSuffixPattern.submissions"
+msgstr "pro monografie"
+
+msgid "doi.manager.settings.doiSuffixPattern.example"
+msgstr "Například, press%ppub%r vytvoří DOI ve tvaru 10.1234/pressESPpub100"
+
+msgid "doi.manager.settings.doiSuffixPattern"
+msgstr ""
+"Pro generování DOI suffixu použijte následující vzor. Použijte %p pro "
+"iniciály nakladatelsví, %m pro ID monografie, %c pro ID kapitoly, %f pro ID "
+"publikačního formátu, %s pro ID souboru a %x pro \"Vlastní identifikátor\"."
+
+msgid "doi.manager.settings.doiSuffix.description"
+msgstr ""
+"Suffix DOI může mít jakoukoli formu, ale musí být jedinečný mezi všemi "
+"publikovanými objekty se stejným prefixem DOI:"
+
+msgid "doi.manager.settings.doiSuffix"
+msgstr "Suffix DOI"
+
+msgid "doi.manager.settings.doiPrefixPattern"
+msgstr "Prefix DOI je povinný a musí být ve formátu 10.xxxx."
+
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr ""
+"Prefix DOI je přidělován registračními agenturami (např. <a href=\""
+"http://www.crossref.org\" target=\"_new\">CrossRef</a>) a je ve formátu "
+"10.xxxx (např. 10.1234):"
+
+msgid "doi.manager.settings.doiPrefix"
+msgstr "Prefix DOI"
+
+msgid "doi.manager.settings.enableSubmissionFileDoi"
+msgstr "Soubory"
+
+msgid "doi.manager.settings.enableRepresentationDoi"
+msgstr "Publikační formáty"
+
+msgid "doi.manager.settings.enableChapterDoi"
+msgstr "Kapitoly"
+
+msgid "doi.manager.settings.enablePublicationDoi"
+msgstr "Monografie"
+
+msgid "doi.manager.settings.explainDois"
+msgstr ""
+"Zvolte, prosím, publikační objekty, které mají mít přiděleny Digital Object "
+"Identifiers (DOI):"
+
+msgid "doi.manager.settings.doiObjectsRequired"
+msgstr "Zvolte, prosím, které objekty mají mít přiděleno DOI."
+
+msgid "doi.manager.settings.doiObjects"
+msgstr "Obsah nakladatelství"
+
+msgid "doi.manager.settings.description"
+msgstr ""
+"Naonfigurujte, prosím, plugin DOI, abyste mohli spravovat a používat DOI v "
+"OMP:"
+
+msgid "doi.readerDisplayName"
+msgstr "DOI:"
+
+msgid "doi.description"
+msgstr ""
+"Tento plugin umožňuje přiřazení identifikátorů digitálních objektů DOI k "
+"monografiím, kapitolám, publikačním formátům a souborům v OMP."
+
+msgid "doi.displayName"
+msgstr "DOI"
