--- a/locale/gl_ES/manager.po
+++ b/locale/gl_ES/manager.po
@@ -1438,3 +1438,204 @@ msgid "manager.setup.notifications.copySubmissionAckPrimaryContact.description"
 msgstr ""
 "Envia unha cópia do correo electrónico de confirmación do envío ao contacto "
 "principal desta editorial."
+
+msgid "doi.editor.preview.objects"
+msgstr "Elemento"
+
+msgid "doi.editor.preview.files"
+msgstr "Arquivo: {$title}"
+
+msgid "doi.editor.preview.publicationFormats"
+msgstr "Formato de publicación: {$title}"
+
+msgid "doi.editor.preview.chapters"
+msgstr "Capítulo: {$title}"
+
+msgid "doi.editor.preview.publication.none"
+msgstr "Non se asignou un DOI a esta publicación."
+
+msgid "doi.editor.preview.publication"
+msgstr "O DOI desta publicación será {$doi}."
+
+msgid "doi.editor.missingPrefix"
+msgstr "O DOI debe comezar con {$doiPrefix}."
+
+msgid "doi.editor.assignDoi.assigned"
+msgstr "Asignouse o DOI {$pubId}."
+
+msgid "doi.editor.assignDoi.pattern"
+msgstr ""
+"Non se pode asignar o DOI {$pubId} porque contén un padrón sen resolver."
+
+msgid "doi.editor.assignDoi.emptySuffix"
+msgstr "Non se pode asignar o DOI porque falta o sufixo personalizado."
+
+msgid "doi.editor.assignDoi"
+msgstr "Asignar o DOI {$pubId} a este {$pubObjectType}"
+
+msgid "doi.editor.clearObjectsDoi.confirm"
+msgstr "Estás seguro/a de que desexas eliminar o DOI existente?"
+
+msgid "doi.editor.clearObjectsDoi"
+msgstr "Limpar"
+
+msgid "doi.editor.doiSuffixCustomIdentifierNotUnique"
+msgstr ""
+"O sufixo DOI indicado xa está en uso en outro elemento publicado. Insira un "
+"sufixo DOI único para cada elemento."
+
+msgid "doi.editor.assigned"
+msgstr "O DOI é asignado a este {$pubObjectType}."
+
+msgid "doi.editor.canBeAssigned"
+msgstr ""
+"O que ves é unha vista previa do DOI. Marque a caixa de verificación e garde "
+"o formulario para asignar o DOI."
+
+msgid "doi.editor.patternNotResolved"
+msgstr "Non se pode asignar o DOI porque contén un padrón sen resolver."
+
+msgid "doi.editor.missingParts"
+msgstr ""
+"Non podes xerar un DOI porque faltan datos nunha ou máis partes do padrón "
+"DOI."
+
+msgid "doi.editor.customSuffixMissing"
+msgstr "Non se pode asignar o DOI porque falta o sufixo personalizado."
+
+msgid "doi.editor.doiObjectTypeSubmissionFile"
+msgstr "arquivo"
+
+msgid "doi.editor.doiObjectTypeRepresentation"
+msgstr "formato de publicación"
+
+msgid "doi.editor.doiObjectTypeChapter"
+msgstr "capítulo"
+
+msgid "doi.editor.doiObjectTypeSubmission"
+msgstr "monografía"
+
+msgid "doi.editor.doi.assignDoi"
+msgstr "Asignar"
+
+msgid "doi.editor.doi.description"
+msgstr "O DOI debe comezar con {$prefix}."
+
+msgid "doi.editor.doi"
+msgstr "Identificador de obxecto dixital (DOI)"
+
+msgid "doi.manager.settings.doiReassign.confirm"
+msgstr "Estás seguro/a de que desexas eliminar todos os DOIs existentes?"
+
+msgid "doi.manager.settings.doiReassign.description"
+msgstr ""
+"Se cambia a configuración do DOI, os DOI xa asignados non se verán "
+"afectados. Unha vez gardada a configuración do DOI, use este botón para "
+"borrar todos os DOIs existentes para que a nova configuración teña efecto en "
+"todos os obxectos existentes."
+
+msgid "doi.manager.settings.doiReassign"
+msgstr "Asignar os DOI de novo"
+
+msgid "doi.manager.settings.doiSubmissionFileSuffixPatternRequired"
+msgstr "Insira o padrón do sufixo DOI para os arquivos."
+
+msgid "doi.manager.settings.doiRepresentationSuffixPatternRequired"
+msgstr "Insira o padrón do sufixo DOI para os formatos de publicación."
+
+msgid "doi.manager.settings.doiChapterSuffixPatternRequired"
+msgstr "Insira o padrón do sufixo DOI para os capítulos."
+
+msgid "doi.manager.settings.doiPublicationSuffixPatternRequired"
+msgstr "Insira o padrón do sufixo DOI para as monografías."
+
+msgid "doi.manager.settings.doiSuffixCustomIdentifier"
+msgstr ""
+"Introduza un sufixo DOI individual para cada elemento publicado. Atoparás un "
+"campo de entrada DOI adicional na páxina de metadatos de cada elemento."
+
+msgid "doi.manager.settings.doiSuffixDefault.description"
+msgstr ""
+"%p.%m para monografías<br />%p.%m.c%c para capítulos<br />%p.%m.%f para "
+"formatos de publicación<br />%p.%m.%f.%s para arquivos."
+
+msgid "doi.manager.settings.doiSuffixDefault"
+msgstr "Usar modelos predeterminados."
+
+msgid "doi.manager.settings.doiSuffixPattern.files"
+msgstr "para arquivos"
+
+msgid "doi.manager.settings.doiSuffixPattern.representations"
+msgstr "para formatos de publicación"
+
+msgid "doi.manager.settings.doiSuffixPattern.chapters"
+msgstr "para capítulos"
+
+msgid "doi.manager.settings.doiSuffixPattern.submissions"
+msgstr "para monografías"
+
+msgid "doi.manager.settings.doiSuffixPattern.example"
+msgstr ""
+"Por exemplo, press%ppub%r podería crear un DOI como 10.1234/pressESPpub100"
+
+msgid "doi.manager.settings.doiSuffixPattern"
+msgstr ""
+"Use o patrón que se introduce a continuación para xerar sufixos DOI. Use %p "
+"para as iniciais de prensa, %m para o id da monografía, %c para o id do "
+"capítulo, %f para o ID do formato de publicación, %s para o ID do arquivo e %"
+"x para \"Identificador personalizado\"."
+
+msgid "doi.manager.settings.doiSuffix.description"
+msgstr ""
+"Un sufixo DOI pode adoptar calquera forma, pero debe ser único entre todos "
+"os obxectos publicados co mesmo prefixo DOI:"
+
+msgid "doi.manager.settings.doiSuffix"
+msgstr "Sufixo do DOI"
+
+msgid "doi.manager.settings.doiPrefixPattern"
+msgstr "O prefixo DOI é obrigatorio e debe ter a forma 10.xxxx."
+
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr ""
+"O prefixo DOI é asignado polas axencias de rexistro (por exemplo, <a href=\""
+"http://www.crossref.org\" target=\"_new\">CrossRef</a>) e ten o formato "
+"10.xxxx (por exemplo, 10.1234):"
+
+msgid "doi.manager.settings.doiPrefix"
+msgstr "Prefixo DOI"
+
+msgid "doi.manager.settings.enableSubmissionFileDoi"
+msgstr "Arquivos"
+
+msgid "doi.manager.settings.enableRepresentationDoi"
+msgstr "Formatos de publicación"
+
+msgid "doi.manager.settings.enableChapterDoi"
+msgstr "Capítulos"
+
+msgid "doi.manager.settings.enablePublicationDoi"
+msgstr "Monografías"
+
+msgid "doi.manager.settings.explainDois"
+msgstr "Seleccione os obxectos publicados que terán asignado DOI:"
+
+msgid "doi.manager.settings.doiObjectsRequired"
+msgstr "Escolla os elementos aos que se deben asignar o DOI."
+
+msgid "doi.manager.settings.doiObjects"
+msgstr "Contido da publicación"
+
+msgid "doi.manager.settings.description"
+msgstr "Configure o complemento DOI para poder xestionar e usar os DOIs en OMP:"
+
+msgid "doi.readerDisplayName"
+msgstr "DOI:"
+
+msgid "doi.description"
+msgstr ""
+"Este complemento permite a asignación dos DOI a monografías, capítulos, "
+"formatos de publicación e arquivos en OMP."
+
+msgid "doi.displayName"
+msgstr "Identificador de obxecto dixital (DOI)"
