--- a/locale/mk_MK/manager.po
+++ b/locale/mk_MK/manager.po
@@ -1472,3 +1472,208 @@ msgstr "УРЛ кон страниците на издавачот"
 
 msgid "emailTemplate.variable.context.contextName"
 msgstr "Име на издавачот"
+
+msgid "doi.editor.preview.objects"
+msgstr "Предмет"
+
+msgid "doi.editor.preview.files"
+msgstr "Датотека: {$title}"
+
+msgid "doi.editor.preview.publicationFormats"
+msgstr "Формат на публикација: {$title}"
+
+msgid "doi.editor.preview.chapters"
+msgstr "Поглавје: {$title}"
+
+msgid "doi.editor.preview.publication.none"
+msgstr "ДОИ не е доделен на оваа публикација."
+
+msgid "doi.editor.preview.publication"
+msgstr "ДОИ за оваа публикација ќе биде {$doi}."
+
+msgid "doi.editor.missingPrefix"
+msgstr "ДОИ мора да започне со {$doiPrefix}."
+
+msgid "doi.editor.assignDoi.assigned"
+msgstr "Назначен е ДОИ {$pubId}."
+
+msgid "doi.editor.assignDoi.pattern"
+msgstr "ДОИ {$pubId} не може да се додели бидејќи содржи нерешена шема."
+
+msgid "doi.editor.assignDoi.emptySuffix"
+msgstr "DOI не може да се додели бидејќи недостасува прилагодената наставка."
+
+msgid "doi.editor.assignDoi"
+msgstr "Доделете го ДОИ {$pubId} на овој {$pubObjectType}"
+
+msgid "doi.editor.clearObjectsDoi.confirm"
+msgstr "Дали сте сигурни дека сакате да го избришете постојниот ДОИ?"
+
+msgid "doi.editor.clearObjectsDoi"
+msgstr "Исчисти"
+
+msgid "doi.editor.doiSuffixCustomIdentifierNotUnique"
+msgstr ""
+"Дадената наставка ДОИ веќе се користи за друга објавена ставка. Внесете "
+"уникатен додаток ДОИ за секоја ставка."
+
+msgid "doi.editor.assigned"
+msgstr "ДОИ е доделен на овој {$pubObjectType}."
+
+msgid "doi.editor.canBeAssigned"
+msgstr ""
+"Она што го гледате е преглед на DOI. Изберете го полето за избор и зачувајте "
+"го образецот за да го доделите DOI."
+
+msgid "doi.editor.patternNotResolved"
+msgstr "ДОИ не може да се додели затоа што содржи нерешена шема."
+
+msgid "doi.editor.missingParts"
+msgstr ""
+"Не можете да генерирате DOI бидејќи на еден или повеќе делови од моделот DOI "
+"недостасуваат податоци."
+
+msgid "doi.editor.customSuffixMissing"
+msgstr "DOI не може да се додели бидејќи недостасува прилагодената наставка."
+
+msgid "doi.editor.doiObjectTypeSubmissionFile"
+msgstr "досие"
+
+msgid "doi.editor.doiObjectTypeRepresentation"
+msgstr "формат на објавување"
+
+msgid "doi.editor.doiObjectTypeChapter"
+msgstr "поглавје"
+
+msgid "doi.editor.doiObjectTypeSubmission"
+msgstr "монографија"
+
+msgid "doi.editor.doi.assignDoi"
+msgstr "Додели"
+
+msgid "doi.editor.doi.description"
+msgstr "ДОИ мора да започне со {$prefix}."
+
+msgid "doi.editor.doi"
+msgstr "ДОИ"
+
+msgid "doi.manager.settings.doiReassign.confirm"
+msgstr "Дали сте сигурни дека сакате да ги избришете сите постојни ДОИ?"
+
+msgid "doi.manager.settings.doiReassign.description"
+msgstr ""
+"Ако ја промените конфигурацијата DOI, ДОИ што веќе се доделени нема да бидат "
+"засегнати. Откако ќе се зачува конфигурацијата DOI, користете го ова копче "
+"за да ги исчистите сите постојни DOI, така што новите поставки ќе стапат на "
+"сила со сите постојни објекти."
+
+msgid "doi.manager.settings.doiReassign"
+msgstr "Поставете повторно ДОИ"
+
+msgid "doi.manager.settings.doiSubmissionFileSuffixPatternRequired"
+msgstr "Внесете ја шемата на наставката ДОИ за датотеките."
+
+msgid "doi.manager.settings.doiRepresentationSuffixPatternRequired"
+msgstr "Внесете ја шемата за наставки ДОИ за формати на објавување."
+
+msgid "doi.manager.settings.doiChapterSuffixPatternRequired"
+msgstr "Внесете ја шемата на наставката ДОИ за поглавјата."
+
+msgid "doi.manager.settings.doiPublicationSuffixPatternRequired"
+msgstr "Внесете ја шемата за наставки ДОИ за монографии."
+
+msgid "doi.manager.settings.doiSuffixCustomIdentifier"
+msgstr ""
+"Внесете индивидуален додаток на ДОИ за секоја објавена ставка. Ќе најдете "
+"дополнително поле за внесување DOI на страницата со мета-податоци на секоја "
+"ставка."
+
+msgid "doi.manager.settings.doiSuffixDefault.description"
+msgstr ""
+"%p.%m за монографии <br />%p.%mc%c за поглавја <br />%p.%m.% f за формати на "
+"објавување <br />%p.%m.%f.%s за датотеки."
+
+msgid "doi.manager.settings.doiSuffixDefault"
+msgstr "Користете стандардни обрасци."
+
+msgid "doi.manager.settings.doiSuffixPattern.files"
+msgstr "за датотеки"
+
+msgid "doi.manager.settings.doiSuffixPattern.representations"
+msgstr "за формати на објавување"
+
+msgid "doi.manager.settings.doiSuffixPattern.chapters"
+msgstr "за поглавја"
+
+msgid "doi.manager.settings.doiSuffixPattern.submissions"
+msgstr "за монографии"
+
+msgid "doi.manager.settings.doiSuffixPattern.example"
+msgstr ""
+"На пример, изданието %ppub% r може да создаде ДОИ како што е 10.1234 / "
+"pressESPpub100"
+
+msgid "doi.manager.settings.doiSuffixPattern"
+msgstr ""
+"Користете ја шемата внесена подолу за да генерирате наставки DOI. Користете %"
+"p за иницијали на изданието, %m за монографија ИД, %c за глава ИД, %f за ИД "
+"формат на публикација, %s за датотека и %x за \"Прилагоден идентификатор\"."
+
+msgid "doi.manager.settings.doiSuffix.description"
+msgstr ""
+"Додаток на ДОИ може да има каква било форма, но мора да биде единствен меѓу "
+"сите објавувачки објекти со ист доделен префикс ДОИ:"
+
+msgid "doi.manager.settings.doiSuffix"
+msgstr "Додаток на ДОИ"
+
+msgid "doi.manager.settings.doiPrefixPattern"
+msgstr "Префиксот DOI е задолжителен и мора да биде во форма 10.xxxx."
+
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr ""
+"Префиксот на ДОИ е доделен од агенциите за регистрација (на пр.<a href=\""
+"http://www.crossref.org\" target=\"_new\">CrossRef</a>) и е во формат "
+"10.xxxx (на пример, 10.1234):"
+
+msgid "doi.manager.settings.doiPrefix"
+msgstr "Префикс на ДОИ"
+
+msgid "doi.manager.settings.enableSubmissionFileDoi"
+msgstr "Датотеки"
+
+msgid "doi.manager.settings.enableRepresentationDoi"
+msgstr "Формати на публикации"
+
+msgid "doi.manager.settings.enableChapterDoi"
+msgstr "Поглавја"
+
+msgid "doi.manager.settings.enablePublicationDoi"
+msgstr "Монографии"
+
+msgid "doi.manager.settings.explainDois"
+msgstr ""
+"Изберете ги објектите за објавување на кои ќе им бидат доделени "
+"идентификатори на дигитални објекти (ДОИ):"
+
+msgid "doi.manager.settings.doiObjectsRequired"
+msgstr "Ве молиме, изберете ги предметите на кои треба да се доделат ДОИ."
+
+msgid "doi.manager.settings.doiObjects"
+msgstr "Притиснете ја содржината"
+
+msgid "doi.manager.settings.description"
+msgstr ""
+"Конфигурирајте го приклучокот DOI за да можете да управувате и да користите "
+"DOI во OMP:"
+
+msgid "doi.readerDisplayName"
+msgstr "ДОИ:"
+
+msgid "doi.description"
+msgstr ""
+"Овој приклучок овозможува доделување на Дигитални идентификатори на објекти "
+"на монографии, поглавја, формати на објавување и датотеки во OMP."
+
+msgid "doi.displayName"
+msgstr "ДОИ"
