--- a/locale/nb_NO/manager.po
+++ b/locale/nb_NO/manager.po
@@ -1405,3 +1405,207 @@ msgid "manager.series.confirmDeactivateSeries.error"
 msgstr ""
 "Minst en serie må være aktiv. Gå til arbeidsflytinnstillingene for å "
 "deaktivere alle innleveringer til denne utgiveren."
+
+msgid "doi.editor.preview.objects"
+msgstr "Objekt"
+
+msgid "doi.editor.preview.files"
+msgstr "Fil: {$title}"
+
+msgid "doi.editor.preview.publicationFormats"
+msgstr "Publikasjonsformat: {$title}"
+
+msgid "doi.editor.preview.chapters"
+msgstr "Kapittel: {$title}"
+
+msgid "doi.editor.preview.publication.none"
+msgstr "Ingen DOI er tildelt denne publikasjonen."
+
+msgid "doi.editor.preview.publication"
+msgstr "DOI for denne publikasjonen blir {$doi}."
+
+msgid "doi.editor.missingPrefix"
+msgstr "DOI-en må begynne med {$doiPrefix}."
+
+msgid "doi.editor.assignDoi.assigned"
+msgstr "DOI-en {$pubId} er tildelt."
+
+msgid "doi.editor.assignDoi.pattern"
+msgstr ""
+"DOI {$pubId} kan ikke tildeles fordi den inneholder et uløselig mønster."
+
+msgid "doi.editor.assignDoi.emptySuffix"
+msgstr "DOI kan ikke tildeles fordi det tilpassede suffikset mangler."
+
+msgid "doi.editor.assignDoi"
+msgstr "Tilordne DOI {$pubId} til denne {$pubObjectType}"
+
+msgid "doi.editor.clearObjectsDoi.confirm"
+msgstr "Er du sikker på at du vil slette eksisterende DOI?"
+
+msgid "doi.editor.clearObjectsDoi"
+msgstr "Fjern"
+
+msgid "doi.editor.doiSuffixCustomIdentifierNotUnique"
+msgstr ""
+"Det spesifiserte DOI-suffikset er allerede i bruk sammen med et annet "
+"publisert element. Skriv inn et unikt DOI-suffiks for hvert element."
+
+msgid "doi.editor.assigned"
+msgstr "DOI er tildelt denne {$pubObjectType}."
+
+msgid "doi.editor.canBeAssigned"
+msgstr ""
+"Det du ser er en forhåndsvisning av DOI. Merk av i boksen og lagre skjemaet "
+"for å bruke DOI."
+
+msgid "doi.editor.patternNotResolved"
+msgstr "DOI kan ikke tildeles fordi den inneholder et uløselig mønster."
+
+msgid "doi.editor.missingParts"
+msgstr ""
+"Du kan ikke generere en DOI fordi en eller flere deler av DOI-mønsteret "
+"mangler data."
+
+msgid "doi.editor.customSuffixMissing"
+msgstr "DOI kan ikke tildeles fordi det brukerdefinerte suffikset mangler."
+
+msgid "doi.editor.doiObjectTypeSubmissionFile"
+msgstr "fil"
+
+msgid "doi.editor.doiObjectTypeRepresentation"
+msgstr "publiseringsformat"
+
+msgid "doi.editor.doiObjectTypeChapter"
+msgstr "kapittel"
+
+msgid "doi.editor.doiObjectTypeSubmission"
+msgstr "monografi"
+
+msgid "doi.editor.doi.assignDoi"
+msgstr "Tildel"
+
+msgid "doi.editor.doi.description"
+msgstr "DOI-en må begynne med {$prefix}."
+
+msgid "doi.editor.doi"
+msgstr "DOI"
+
+msgid "doi.manager.settings.doiReassign.confirm"
+msgstr "Er du sikker på at du vil slette alle eksisterende DOI-er?"
+
+msgid "doi.manager.settings.doiReassign.description"
+msgstr ""
+"Endring av DOI-konfigurasjonen påvirker ikke tildelte DOI-er som allerede er "
+"tildelt. Når DOI-konfigurasjonen er lagret, kan du bruke denne knappen til å "
+"fjerne alle eksisterende DOI-er slik at de nye innstillingene trer i kraft "
+"over alle eksisterende elementer."
+
+msgid "doi.manager.settings.doiReassign"
+msgstr "Tildel DOI-er på ny"
+
+msgid "doi.manager.settings.doiSubmissionFileSuffixPatternRequired"
+msgstr "Skriv inn DOI-suffiksmønsteret for for filer."
+
+msgid "doi.manager.settings.doiRepresentationSuffixPatternRequired"
+msgstr "Skriv inn DOI-suffiksmønsteret for publikasjonsformater."
+
+msgid "doi.manager.settings.doiChapterSuffixPatternRequired"
+msgstr "Skriv inn DOI-suffiksmønsteret for kapitler."
+
+msgid "doi.manager.settings.doiPublicationSuffixPatternRequired"
+msgstr "Skriv inn DOI-suffiksmønsteret for monografier."
+
+msgid "doi.manager.settings.doiSuffixCustomIdentifier"
+msgstr ""
+"Skriv inn et individuelt DOI-suffiks for hvert publiserte objekt. Du finner "
+"et ekstra DOI-inntastingsfelt på metadata-siden til hvert objekt."
+
+msgid "doi.manager.settings.doiSuffixDefault.description"
+msgstr ""
+"%p.%m til monografier<br />%p.%m.c%c til kapitler<br />%p.%m.%f til "
+"publikasjonsformater<br />%p.%m.%f.%s til filer."
+
+msgid "doi.manager.settings.doiSuffixDefault"
+msgstr "Bruk standardmønstre."
+
+msgid "doi.manager.settings.doiSuffixPattern.files"
+msgstr "til filer"
+
+msgid "doi.manager.settings.doiSuffixPattern.representations"
+msgstr "til publikasjonsformater"
+
+msgid "doi.manager.settings.doiSuffixPattern.chapters"
+msgstr "til kapitler"
+
+msgid "doi.manager.settings.doiSuffixPattern.submissions"
+msgstr "til monografier"
+
+msgid "doi.manager.settings.doiSuffixPattern.example"
+msgstr ""
+"For eksempel, press%ppub%r vil generere følgende DOI: 10.1234/pressESPpub100"
+
+msgid "doi.manager.settings.doiSuffixPattern"
+msgstr ""
+"Bruk mønsteret nedenfor for å generere DOI-suffikser. Bruk %p for initialer "
+"for utgivere,%m for monografi-ID,%c for kapittel-ID,%f for publikasjons-ID,%"
+"s for fil-ID og %x for \"Egendefinert identifikator\"."
+
+msgid "doi.manager.settings.doiSuffix.description"
+msgstr ""
+"Et DOI-suffiks kan ha hvilken som helst form, men må være unikt for "
+"publiseringsobjektene som har samme DOI-prefiks:"
+
+msgid "doi.manager.settings.doiSuffix"
+msgstr "DOI-suffiks"
+
+msgid "doi.manager.settings.doiPrefixPattern"
+msgstr ""
+"DOI-prefikset er obligatorisk og må være på formatet 10.xxxx, hvor x er et "
+"tall."
+
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr ""
+"DOI-prefikset er tildelt av registreringsinstitusjoner (f.eks. <a href=\""
+"http://www.crossref.org\" target=\"_new\"> CrossRef </a>) og er i 10.xxxx-"
+"format (f.eks. 10.1234):"
+
+msgid "doi.manager.settings.doiPrefix"
+msgstr "DOI Prefiks"
+
+msgid "doi.manager.settings.enableSubmissionFileDoi"
+msgstr "Filer"
+
+msgid "doi.manager.settings.enableRepresentationDoi"
+msgstr "Publikasjonsformater"
+
+msgid "doi.manager.settings.enableChapterDoi"
+msgstr "Kapitler"
+
+msgid "doi.manager.settings.enablePublicationDoi"
+msgstr "Monografier"
+
+msgid "doi.manager.settings.explainDois"
+msgstr "Velg publiseringsobjektene som skal tildeles DOI:"
+
+msgid "doi.manager.settings.doiObjectsRequired"
+msgstr "Velg objektene som skal tilordnes DOI."
+
+msgid "doi.manager.settings.doiObjects"
+msgstr "Utgiverinnhold"
+
+msgid "doi.manager.settings.description"
+msgstr ""
+"Konfigurer DOI-programtillegget for å kunne administrere og bruke DOIer i "
+"OMP:"
+
+msgid "doi.readerDisplayName"
+msgstr "DOI:"
+
+msgid "doi.description"
+msgstr ""
+"Dette programtillegget muliggjør tildeling av DOI til monografier, kapitler, "
+"publikasjonsformater og filer i OMP."
+
+msgid "doi.displayName"
+msgstr "DOI"
