--- a/locale/sv_SE/manager.po
+++ b/locale/sv_SE/manager.po
@@ -858,3 +858,206 @@ msgstr "Utgivare"
 
 msgid "manager.setup.selectCountry"
 msgstr "Välj pressens land, eller landet för pressens kontaktadress."
+
+msgid "doi.editor.preview.objects"
+msgstr "Objekt"
+
+msgid "doi.editor.preview.files"
+msgstr "Fil: {$title}"
+
+msgid "doi.editor.preview.publicationFormats"
+msgstr "Publiceringsformat: {$title}"
+
+msgid "doi.editor.preview.chapters"
+msgstr "Kapitel: {$title}"
+
+msgid "doi.editor.preview.publication.none"
+msgstr "En DOI har inte tilldelats denna publikation."
+
+msgid "doi.editor.preview.publication"
+msgstr "DOI:n för denna publikationer kommer vara {$doi}."
+
+msgid "doi.editor.missingPrefix"
+msgstr "DOI:n måste börja med {$doiPrefix}."
+
+msgid "doi.editor.assignDoi.assigned"
+msgstr "DOI:n {$pubId} har tilldelats."
+
+msgid "doi.editor.assignDoi.pattern"
+msgstr ""
+"DOI:n {$pubId} kan inte tilldelas eftersom den innehåller ett olösbart "
+"mönster."
+
+msgid "doi.editor.assignDoi.emptySuffix"
+msgstr "DOI:n kan inte tilldelas eftersom det anpassade suffixet saknas."
+
+msgid "doi.editor.assignDoi"
+msgstr "Tilldela DOI:n {$pubId} till denna {$pubObjectType}"
+
+msgid "doi.editor.clearObjectsDoi.confirm"
+msgstr "Är du säker på att du vill radera den nuvarande DOI:n?"
+
+msgid "doi.editor.clearObjectsDoi"
+msgstr "Rensa"
+
+msgid "doi.editor.doiSuffixCustomIdentifierNotUnique"
+msgstr ""
+"Det givna DOI-suffixet används redan i ett annat objekt. Ange ett unikt DOI-"
+"suffix för varje objekt."
+
+msgid "doi.editor.assigned"
+msgstr "DOI:n är tilldelad till denna {$pubObjectType}."
+
+msgid "doi.editor.canBeAssigned"
+msgstr ""
+"Du ser nu en förhandsvisning av DOI:n. Kryssa i rutan och spara formuläret "
+"för att tilldela DOI:n."
+
+msgid "doi.editor.patternNotResolved"
+msgstr "DOI kan inte tilldelas eftersom den innehåller ett olösbart mönster."
+
+msgid "doi.editor.missingParts"
+msgstr ""
+"DOI kan inte genereras eftersom en eller flera delar av DOI-mönstret saknar "
+"data."
+
+msgid "doi.editor.customSuffixMissing"
+msgstr "DOI kan inte tilldelas eftersom det anpassade suffixet saknas."
+
+msgid "doi.editor.doiObjectTypeSubmissionFile"
+msgstr "fil"
+
+msgid "doi.editor.doiObjectTypeRepresentation"
+msgstr "publiceringsformat"
+
+msgid "doi.editor.doiObjectTypeChapter"
+msgstr "kapitel"
+
+msgid "doi.editor.doiObjectTypeSubmission"
+msgstr "bok"
+
+msgid "doi.editor.doi.assignDoi"
+msgstr "Tilldela"
+
+msgid "doi.editor.doi.description"
+msgstr "DOI måste börja med {$prefix}."
+
+msgid "doi.editor.doi"
+msgstr "DOI"
+
+msgid "doi.manager.settings.doiReassign.confirm"
+msgstr "Är du säker på att du vill radera alla nuvarande DOI:er?"
+
+msgid "doi.manager.settings.doiReassign.description"
+msgstr ""
+"Redan tilldelade DOI:er kommer inte påverkas om du ändrar i dina DOI-"
+"inställningar. Använd denna knapp efter att DOI-inställningarna sparats för "
+"att rensa alla nuvarande DOI:er och tilldela nya DOI:er enligt de nya "
+"inställningarna."
+
+msgid "doi.manager.settings.doiReassign"
+msgstr "Tilldela DOI:er på nytt"
+
+msgid "doi.manager.settings.doiSubmissionFileSuffixPatternRequired"
+msgstr "Ange mönster för DOI-suffix för filer."
+
+msgid "doi.manager.settings.doiRepresentationSuffixPatternRequired"
+msgstr "Ange mönster för DOI-suffix för publiceringsformat."
+
+msgid "doi.manager.settings.doiChapterSuffixPatternRequired"
+msgstr "Ange mönster för DOI-suffix för kapitel."
+
+msgid "doi.manager.settings.doiPublicationSuffixPatternRequired"
+msgstr "Ange mönster för DOI-suffix för böcker."
+
+msgid "doi.manager.settings.doiSuffixCustomIdentifier"
+msgstr ""
+"Ange ett DOI-suffix för varje enskilt objekt. Det finns ett DOI-fält på "
+"varje objekts metadata-sida."
+
+msgid "doi.manager.settings.doiSuffixDefault.description"
+msgstr ""
+"%p. %m för böcker <br />%p. %m.c%c för kapitel<br />%p.%m.%f för "
+"publiceringsformat<br />%p.%m.%f%s för filer."
+
+msgid "doi.manager.settings.doiSuffixDefault"
+msgstr "Använd standardmönster."
+
+msgid "doi.manager.settings.doiSuffixPattern.files"
+msgstr "för filer"
+
+msgid "doi.manager.settings.doiSuffixPattern.representations"
+msgstr "för publiceringsformat"
+
+msgid "doi.manager.settings.doiSuffixPattern.chapters"
+msgstr "för kapitel"
+
+msgid "doi.manager.settings.doiSuffixPattern.submissions"
+msgstr "för böcker"
+
+msgid "doi.manager.settings.doiSuffixPattern.example"
+msgstr ""
+"Exempelvis, press%ppub%r kan generera en DOI som exempelvis ser ut som "
+"följer: 10.1234/pressESPpub100"
+
+msgid "doi.manager.settings.doiSuffixPattern"
+msgstr ""
+"Använd mönstret nedan för att generera DOI-suffix. Använd %p för pressens "
+"inititaler, %m för bokens ID, %c för kapitlets ID, %f för "
+"publiceringsformatets id, %s för filens ID, och %x för en anpassad "
+"identifikator."
+
+msgid "doi.manager.settings.doiSuffix.description"
+msgstr ""
+"Ett DOI-suffix kan formateras på olika sätt, men måste vara unikt för varje "
+"objekt inom ett och samma DOI-prefix:"
+
+msgid "doi.manager.settings.doiSuffix"
+msgstr "DOI-suffix"
+
+msgid "doi.manager.settings.doiPrefixPattern"
+msgstr "DOI-prefix är obligatoriskt och måste formateras som 10.xxxx."
+
+msgid "doi.manager.settings.doiPrefix.description"
+msgstr ""
+"DOI-prefix tilldelas av registreringsorganisationer (t.ex. <a href=\""
+"http://www.crossref.org\" target=\"_new\">CrossRef</a>) och formateras som "
+"10.xxxx (t.ex. 10.1234):"
+
+msgid "doi.manager.settings.doiPrefix"
+msgstr "DOI-prefix"
+
+msgid "doi.manager.settings.enableSubmissionFileDoi"
+msgstr "Filer"
+
+msgid "doi.manager.settings.enableRepresentationDoi"
+msgstr "Publiceringsformat"
+
+msgid "doi.manager.settings.enableChapterDoi"
+msgstr "Kapitel"
+
+msgid "doi.manager.settings.enablePublicationDoi"
+msgstr "Böcker"
+
+msgid "doi.manager.settings.explainDois"
+msgstr "Välj vilka objekt som ska tilldelas DOI:"
+
+msgid "doi.manager.settings.doiObjectsRequired"
+msgstr "Välj vilka objekt som kan tilldelas DOI."
+
+msgid "doi.manager.settings.doiObjects"
+msgstr "Pressens innehåll"
+
+msgid "doi.manager.settings.description"
+msgstr "Konfigurera DOI-pluginet för att kunna använda DOI i OMP:"
+
+msgid "doi.readerDisplayName"
+msgstr "DOI:"
+
+msgid "doi.description"
+msgstr ""
+"Denna plugin gör det möjligt att till dela Digital Object Identifier (DOI) "
+"till böcker, kapitel och publiceringsformat i OMP."
+
+msgid "doi.displayName"
+msgstr "DOI"
